# Compiler-Generator

./: CMakeLists.txt  main.cpp  test.txt
DFA/: DFA.cpp  DFA.h
DFAConverter/: DFA.cpp  DFA.h
Google_tests/: CMakeLists.txt  DFATest.cpp  IntegrationTest.cpp  NFATest.cpp  STGeneratorTest.cpp
Google_tests/lib/: README.md
Google_tests/lib/docs/: gmock_cook_book.md  primer.md
Google_tests/lib/docs/_layouts/: default.html
Google_tests/lib/googlemock/include/gmock/: gmock-actions.h  gmock-matchers.h  gmock-spec-builders.h
Google_tests/lib/googlemock/src/: gmock-internal-utils.cc
Google_tests/lib/googletest/include/gtest/: gtest-message.h  gtest-printers.h  gtest.h
Google_tests/lib/googletest/include/gtest/internal/: gtest-filepath.h  gtest-internal.h  gtest-string.h
Google_tests/lib/googletest/src/: gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest.cc
NFAConverter/: CMakeLists.txt  NFA.cpp  NFA.h  NFACombiner.cpp  NFACombiner.h  State.cpp  State.h  Transition.cpp
SymbolTableGenerator/: CMakeLists.txt  LAOutput.cpp  LAOutput.h  LATrace.cpp  LATrace.h  STGenerator.cpp  STGenerator.h  STRow.cpp  STRow.h  SyntaxError.cpp  SyntaxError.h
parser/: CFGrammar.h  Common.h  Parser.cpp  Parser.h  Production.h  Symbol.h  SyntaxTree.h  Token.h  main.cpp
